--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^12.0",
-        "symfony/maker-bundle": "^1.62"
+        "symfony/maker-bundle": "^1.62",
+        "symfony/stopwatch": "7.2.*",
+        "symfony/web-profiler-bundle": "7.2.*"
     }
 }
