--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
 .terminal
+
+###> phpstan/phpstan ###
+phpstan.neon
+###< phpstan/phpstan ###
