--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,7 @@
         }
     },
     "require-dev": {
+        "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^12.0",
         "symfony/maker-bundle": "^1.62",
         "symfony/stopwatch": "7.2.*",
