--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "alcohol/iso4217": "^4.2",
         "guzzlehttp/guzzle": "^7.0",
         "predis/predis": "^2.3",
         "symfony/console": "7.2.*",
