--- a/.env
+++ b/.env
@@ -25,3 +25,4 @@ APP_SECRET=
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
+REDIS_HOST=redis
