--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,40 @@
 services:
+  web:
+    image: nginx:1.26.3-alpine
+    container_name: web-container
+    ports:
+      - "8080:80"
+    volumes:
+      - ./:/var/www/currency-converter
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - php
+      - redis
+    networks:
+      - currency-converter-network
+  php:
+    build:
+      context: ./docker/php
+    container_name: php-container
+    ports:
+      - "9000:9000"
+    volumes:
+      - ./:/var/www/currency-converter
+    networks:
+      - currency-converter-network
   redis:
-    image: redis:latest
+    image: redis:7.4-alpine
     container_name: redis-container
     restart: always
     volumes:
       - redis_data:/data
     ports:
       - "6379:6379"
+    networks:
+      - currency-converter-network
 
 volumes:
   redis_data:
 
+networks:
+  currency-converter-network:
