--- a/composer.json
+++ b/composer.json
@@ -83,7 +83,10 @@
         "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^12.0",
         "squizlabs/php_codesniffer": "*",
+        "symfony/browser-kit": "7.2.*",
+        "symfony/css-selector": "7.2.*",
         "symfony/maker-bundle": "^1.62",
+        "symfony/phpunit-bridge": "^7.2",
         "symfony/stopwatch": "7.2.*",
         "symfony/web-profiler-bundle": "7.2.*"
     }
