--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Validate composer.json and composer.lock
         run: composer validate --strict
   unit-tests:
+    needs: validate-composer
     runs-on: ubuntu-latest
     steps:
       - name: Setup PHP with PECL extension
@@ -32,7 +33,7 @@ jobs:
           key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-php-
-      - name: Install Dependencies
+      - name: Install Composer dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Run test suite
         run: php ./vendor/bin/phpunit --testsuite Unit
